# idasen-tray

./: .gitignore  .style.yapf  CHANGELOG.md  README.md  requirements.txt  setup.cfg
idasen_tray/: config.yaml  idasen_tray.py  logging.yaml
scripts/: start.bat
