[metadata]
name                          = idasen-tray
version                       = 0.1.0
author                        = Mattia Affabris
author_email                  = affa@outlook.it
description                   = Control you IKEA Idasen desk.
long_description              = file: README.md
long_description_content_type = text/markdown
url                           = https://github.com/Gliptal/idasen-tray
project_urls                  =
    Readme                    = https://github.com/Gliptal/idasen-tray/blob/master/README.md
    Changelog                 = https://github.com/Gliptal/idasen-tray/blob/master/CHANGELOG.md
classifiers                   =
    Programming Language :: Python :: 3
    Operating System :: Microsoft :: Windows
    Natural Language :: English
    Development Status :: 2 - Pre-Alpha

[options]
package_dir      =
    = idasen
packages         = find:
python_requires  = >=3

[options.packages.find]
where = idasen
